# azure-monitor-opentelemetry-python

./: README.md  setup.cfg  setup.py
azure_monitor/db_sample/: README.md  requirements.txt  sample.py
azure_monitor/flask_sample/: README.md  config.py  endpoint.py  requirements.txt
azure_monitor/flask_sample/app/: __init__.py  metric.py  routes.py
azure_monitor/flask_sample/endpoint/: endpoint_routes.py
azure_monitor/flask_sample/output/: file.txt
azure_monitor/http_sample/: README.md  first.py  index.html  requirements.txt
azure_monitor/http_sample/my_site/: settings.py  urls.py
azure_monitor/http_sample/projects/: urls.py  views.py
