[metadata]
name = opentelemetry-azure-monitor-samples
description = Azure Monitor exporter samples for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
author_email = appinsightssdk@microsoft.com
url = https://github.com/Azure-Samples/azure-monitor-opentelemetry-python
platforms = any
license = MIT
classifiers =
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =flask_sample
packages=find_namespace:
install_requires =
    flask-sqlalchemy >= 2.4.1
    flask-wtf >= 0.14.3
    opentelemetry-azure-monitor ~= 0.3b1
    opentelemetry-ext-flask ~= 0.7b1
    opentelemetry-ext-requests ~= 0.7b1
    opentelemetry-ext-sqlalchemy ~= 0.7b1

[options.packages.find]
where = flask_sample
