[metadata]
name = opentelemetry-azure-monitor-samples
description = Azure Monitor exporter samples for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
author_email = appinsightssdk@microsoft.com
url = https://github.com/Azure-Samples/azure-monitor-opentelemetry-python
platforms = any
license = MIT
classifiers =
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =flask_sample
packages=find_namespace:
install_requires =
    flask >= 1.1.2
    flask-sqlalchemy >= 2.4.1
    flask-wtf >= 0.14.3
    microsoft-opentelemetry-exporter-azuremonitor == 1.0.0b1
    opentelemetry-instrumentation-flask == 0.15b0
    opentelemetry-instrumentation-requests == 0.15b0
    opentelemetry-instrumentation-sqlalchemy == 0.15b0

[options.packages.find]
where = flask_sample
