[metadata]
name = opentelemetry-azure-monitor-samples
description = Azure Monitor exporter samples for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
author_email = appinsightssdk@microsoft.com
url = https://github.com/Azure-Samples/azure-monitor-opentelemetry-python
platforms = any
license = MIT
classifiers =
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =flask_sample
packages=find_namespace:
install_requires =

[options.packages.find]
where = azure_monitor
